--- a/Project/Main/TaskCard.xaml
+++ b/Project/Main/TaskCard.xaml
@@ -1,14 +1,16 @@
 ﻿<UserControl x:Class="Project.Main.TaskCard"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" Width="228">
-    <Border Background="LightGray" CornerRadius="5" Padding="5" Margin="5">
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" Width="216">
+    <Border Background="LightGray" CornerRadius="5" Padding="5" Margin="5" AllowDrop="True"
+            PreviewMouseLeftButtonDown="Border_PreviewMouseLeftButtonDown"
+            PreviewMouseMove="Border_PreviewMouseMove">
         <StackPanel>
             <TextBlock Text="{Binding TaskNumber, RelativeSource={RelativeSource AncestorType=UserControl}, StringFormat='Задача #{0}'}" FontWeight="Bold" FontFamily="Verdana" FontSize="9"/>
-            <TextBlock Text="{Binding TaskName, RelativeSource={RelativeSource AncestorType=UserControl}}" TextWrapping="Wrap" FontFamily="Verdana" FontSize="9"/>
-            <TextBlock Text="{Binding Responsible, RelativeSource={RelativeSource AncestorType=UserControl}, StringFormat='Ответственные: {0}'}" FontStyle="Italic" FontFamily="Verdana" FontSize="8"/>
+            <TextBlock Text="{Binding TaskName, RelativeSource={RelativeSource AncestorType=UserControl}}" TextWrapping="Wrap" FontFamily="Verdana"/>
+            <TextBlock Text="{Binding Responsible, RelativeSource={RelativeSource AncestorType=UserControl}, StringFormat='Ответственные: {0}'}" FontStyle="Italic" FontFamily="Verdana" FontSize="9"/>
             <TextBlock Text="{Binding ProjectCode, RelativeSource={RelativeSource AncestorType=UserControl}, StringFormat='Код проекта: {0}'}" Foreground="Blue" FontFamily="Verdana" FontSize="9"/>
             <TextBlock Text="{Binding ProjectName, RelativeSource={RelativeSource AncestorType=UserControl}, StringFormat='Проект: {0}'}" Foreground="Blue" FontFamily="Verdana" FontSize="9"/>
-            <Button Content="Подзадачи" Click="TaskButton_Click" Margin="0,5,0,0" BorderBrush="#FF000083" Background="#FF000083" Foreground="White" FontFamily="Verdana"/>
+            <Button Content="Подзадачи" Click="TaskButton_Click" Margin="0,5,0,0" Background="#FF000083" BorderBrush="#FF000083" Foreground="White" FontFamily="Verdana"/>
         </StackPanel>
     </Border>
 </UserControl>
