--- a/Project/Pages/Kanban.xaml
+++ b/Project/Pages/Kanban.xaml
@@ -40,12 +40,12 @@
                 </Grid.ColumnDefinitions>
                 <Image Width="30" Height="30" Source="/Image/avata.jpg" />
                 <Label Content="{Binding FullName}" Grid.Column="1"
-                        Margin="0,0,-3,0" 
-                        VerticalAlignment="Center"
-                        Foreground="#FF000083" 
-                        FontWeight="Bold" 
-                        FontFamily="Verdana" FontSize="9"
-                        MouseDown="PAText_MouseDown"/>
+                    Margin="0,0,-3,0" 
+                   VerticalAlignment="Center"
+                   Foreground="#FF000083" 
+                   FontWeight="Bold" 
+                   FontFamily="Verdana" FontSize="9"
+                   MouseDown="PAText_MouseDown"/>   
             </Grid>
             <Button Content="Проекты" Click="Bt7_Projects" 
                     Grid.Row="6" Height="30" Margin="10,0"/>
@@ -71,12 +71,13 @@
 
                 <Button Content="Добавить задачу" 
                         Click="Bt7_AddTask" Background="#FF000083" 
-                        Foreground="White" Padding="10,5" Width="150" Margin="84,0,0,5" Grid.ColumnSpan="2"/>
-                
+                        Foreground="White" Padding="10,5" Grid.Column="1" Height="28" 
+                        VerticalAlignment="Top" Width="150" Margin="0,0,0,5" BorderBrush="#FF000083"/>
             </Grid>
 
             <ScrollViewer Grid.Row="2" HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto">
                 <StackPanel x:Name="parent" Orientation="Horizontal">
+                  
                 </StackPanel>
             </ScrollViewer>
         </Grid>
