--- a/Project/Pages/PersonalAccount.xaml
+++ b/Project/Pages/PersonalAccount.xaml
@@ -76,9 +76,7 @@
                 <ColumnDefinition Width="163*"/>
             </Grid.ColumnDefinitions>
 
-            <Image Width="100" Height="100" 
-                   Source="/Image/avata.jpg"
-                   Grid.Row="0" Grid.Column="0"/>
+            <Image x:Name="profileImage" Width="100" Height="100" Source="/Image/avata.jpg" Grid.Row="0" Grid.Column="0"/>
 
             <StackPanel Grid.Row="0" Grid.Column="1" Margin="10,0,0,0" Grid.ColumnSpan="2">
                 <Label Content="{Binding FullName}"
