--- a/Project/Pages/PersonalAccount.xaml
+++ b/Project/Pages/PersonalAccount.xaml
@@ -40,7 +40,8 @@
                     <ColumnDefinition Width="Auto"/>
                     <ColumnDefinition Width="*"/>
                 </Grid.ColumnDefinitions>
-                <Image Width="30" Height="30" Source="/Image/avata.jpg"/>
+                <Image x:Name="leftProfileImage" Width="30" Height="30" Source="/Image/avata.jpg" Grid.Column="0"/>
+                <!-- Обновлен x:Name -->
                 <Label Content="{Binding FullName}" Grid.Column="1"
                        Margin="0,0,-4,0" 
                        VerticalAlignment="Center"
