--- a/Project/Pages/Kanban.xaml
+++ b/Project/Pages/Kanban.xaml
@@ -45,7 +45,7 @@
                    Foreground="#FF000083" 
                    FontWeight="Bold" 
                    FontFamily="Verdana" FontSize="9"
-                   MouseDown="PAText_MouseDown"/>   
+                   MouseDown="PAText_MouseDown"/>
             </Grid>
             <Button Content="Проекты" Click="Bt7_Projects" 
                     Grid.Row="6" Height="30" Margin="10,0"/>
@@ -69,7 +69,7 @@
                     <Label x:Name="Name_project" FontWeight="Bold" Foreground="#FF0F0FE3"/>
                 </StackPanel>
 
-                <Button Content="Добавить задачу" 
+                <Button x:Name="AddTaskButton" Content="Добавить задачу" 
                         Click="Bt7_AddTask" Background="#FF000083" 
                         Foreground="White" Padding="10,5" Grid.Column="1" Height="28" 
                         VerticalAlignment="Top" Width="150" Margin="0,0,0,5" BorderBrush="#FF000083"/>
@@ -77,7 +77,7 @@
 
             <ScrollViewer Grid.Row="2" HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto">
                 <StackPanel x:Name="parent" Orientation="Horizontal">
-                  
+
                 </StackPanel>
             </ScrollViewer>
         </Grid>
