--- a/Project/Pages/SubtaskKanban.xaml
+++ b/Project/Pages/SubtaskKanban.xaml
@@ -40,12 +40,12 @@
                 </Grid.ColumnDefinitions>
                 <Image Width="30" Height="30" Source="/Image/avata.jpg" />
                 <Label Content="{Binding FullName}" Grid.Column="1"
-                    Margin="0,0,-3,0"
-                   VerticalAlignment="Center"
-                   Foreground="#FF000083"
-                   FontWeight="Bold"
-                   FontFamily="Verdana" FontSize="9"
-                   MouseDown="PAText_MouseDown"/>
+                       Margin="0,0,-3,0"
+                       VerticalAlignment="Center"
+                       Foreground="#FF000083"
+                       FontWeight="Bold"
+                       FontFamily="Verdana" FontSize="9"
+                       MouseDown="PAText_MouseDown"/>
             </Grid>
             <Button Content="Задачи" Click="Bt7_Subtasks"
                     Grid.Row="6" Height="30" Margin="10,0"/>
@@ -62,6 +62,7 @@
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*"/>
                     <ColumnDefinition Width="Auto"/>
+                    <!-- Оставляем только одну колонку для кнопки -->
                 </Grid.ColumnDefinitions>
 
                 <StackPanel Orientation="Horizontal">
@@ -69,14 +70,14 @@
                     <Label x:Name="Name_task" FontWeight="Bold" Foreground="#FF0F0FE3"/>
                 </StackPanel>
 
-                <Button Content="Добавить подзадачу"
+                <Button x:Name="AddSubtaskButton" Content="Добавить подзадачу"
                         Click="Bt7_AddSubtask" Background="#FF000083"
                         Foreground="White" Padding="10,5" Grid.Column="1" Height="28"
                         VerticalAlignment="Top" Width="150" Margin="0,0,0,5" BorderBrush="#FF000083"/>
             </Grid>
 
             <ScrollViewer Grid.Row="2" HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto">
-                <StackPanel x:Name="parent" Orientation="Horizontal"> 
+                <StackPanel x:Name="parent" Orientation="Horizontal">
                     <!-- Подзадачи будут добавлены сюда -->
                 </StackPanel>
             </ScrollViewer>
