--- a/Project/Main/ProjectCard.xaml
+++ b/Project/Main/ProjectCard.xaml
@@ -4,11 +4,11 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d"
-             d:DesignHeight="200" d:DesignWidth="300"
+             d:DesignHeight="195.363" d:DesignWidth="299.42"
              x:Name="root">
 
     <Border CornerRadius="10" Background="White" Padding="20"
-            BorderThickness="1" BorderBrush="#EEEEEE" Margin="0,10,0,10">
+            BorderThickness="1" BorderBrush="#EEEEEE" Margin="0,10,0,-13">
         <Grid>
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto"/>
@@ -20,18 +20,28 @@
                 <RowDefinition Height="Auto"/>
             </Grid.RowDefinitions>
 
-            <TextBlock Grid.Row="0" Text="{Binding ProjectNumber, ElementName=root, StringFormat=№{0}}" 
+            <TextBlock Grid.Row="0" Text="{Binding ProjectNumber, ElementName=root, StringFormat=№{0}}"
                       FontFamily="Verdana" Foreground="#FF898989"
                       Margin="0,0,0,5"/>
 
-            <TextBlock Grid.Row="1" Text="{Binding ProjectName, ElementName=root}" 
-                      FontFamily="Verdana" FontWeight="Bold" FontSize="16"
-                      TextWrapping="Wrap" Margin="0,0,0,5"/>
+            <StackPanel Grid.Row="1" Orientation="Horizontal" Margin="0,0,0,5">
+                <TextBlock Text="{Binding ProjectName, ElementName=root}"
+                          FontFamily="Verdana" FontWeight="Bold" FontSize="16"
+                          TextWrapping="Wrap" VerticalAlignment="Center"/>
+                <Button x:Name="EditProjectButton" Width="24" Height="24" Margin="5,0,0,0"
+                        Background="Transparent" BorderThickness="0" Padding="0"
+                        Click="EditProjectButton_Click" ToolTip="Редактировать проект">
+                    <Button.Content>
+                        <Path Data="M20.71,7.04C21.1,6.65 21.1,6 20.71,5.63L18.37,3.29C18,2.9 17.35,2.9 16.96,3.29L15.12,5.12L18.87,8.87M3,17.25V21H6.75L17.81,9.93L14.06,6.18L3,17.25Z"
+                              Fill="#FF898989" Stretch="Uniform" Height="14" Width="14"/>
+                    </Button.Content>
+                </Button>
+            </StackPanel>
 
-            <TextBlock Grid.Row="2" Text="{Binding CreatorName, ElementName=root, StringFormat=Создатель: {0}}" 
+            <TextBlock Grid.Row="2" Text="{Binding CreatorName, ElementName=root, StringFormat=Создатель: {0}}"
                       FontFamily="Verdana" Margin="0,0,0,5"/>
 
-            <TextBlock Grid.Row="3" Text="{Binding UserRole, ElementName=root, StringFormat=Ваша роль: {0}}" 
+            <TextBlock Grid.Row="3" Text="{Binding UserRole, ElementName=root, StringFormat=Ваша роль: {0}}"
                       FontFamily="Verdana" Foreground="#FF0F0FE3" Margin="0,0,0,5"/>
 
             <StackPanel Grid.Row="4" Orientation="Horizontal" Margin="0,0,0,10">
@@ -71,16 +81,19 @@
                 </TextBlock>
             </StackPanel>
 
-            <Button Grid.Row="4" Content="К задачам проекта" 
-                    Background="#FF000083" Foreground="White" 
-                    FontFamily="Verdana" Height="35" Margin="0,23,0,-3" 
-                    BorderBrush="#FF000083" Click="ProjectButton_Click" Grid.RowSpan="3"/>
+            <TextBlock Grid.Row="4" Text="Подробнее..."
+                       FontFamily="Verdana" Foreground="#FF0000FF" Margin="0,20,0,16"
+                       MouseLeftButtonDown="DetailsTextBlock_MouseLeftButtonDown" TextDecorations="Underline" Cursor="Hand" Grid.RowSpan="2" FontSize="10"/>
 
-            <Button x:Name="DeleteProjectButton" Content="Удалить проект" 
-                    Background="#FFBB0101" Foreground="White" 
-                    FontFamily="Verdana" Height="35" Margin="0,0,0,0" 
+            <Button Grid.Row="5" Content="К задачам проекта"
+                    Background="#FF000083" Foreground="White"
+                    FontFamily="Verdana" Height="35" Margin="0,8,0,4"
+                    BorderBrush="#FF000083" Click="ProjectButton_Click"/>
+
+            <Button x:Name="DeleteProjectButton" Content="Удалить проект"
+                    Background="#FFBB0101" Foreground="White"
+                    FontFamily="Verdana" Height="35" Margin="0,0,0,0"
                     BorderBrush="Red" Click="DeleteProjectButton_Click" Visibility="Collapsed"/>
-            
         </Grid>
     </Border>
 </UserControl>
