--- a/Project/Main/SubtaskCard.xaml
+++ b/Project/Main/SubtaskCard.xaml
@@ -1,45 +1,56 @@
 ﻿<UserControl x:Class="Project.Main.SubtaskCard"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              mc:Ignorable="d"
              Width="216"
              x:Name="root">
-    <Border Background="LightGray" 
-            CornerRadius="5" 
-            Padding="5" 
-            Margin="5" 
+    <Border Background="LightGray"
+            CornerRadius="5"
+            Padding="5"
+            Margin="5"
             AllowDrop="True"
             PreviewMouseLeftButtonDown="Border_PreviewMouseLeftButtonDown"
             PreviewMouseMove="Border_PreviewMouseMove">
-        <StackPanel>
-            <TextBlock Text="{Binding SubtaskNumber, ElementName=root, StringFormat='Подзадача #{0}'}" 
-                       FontWeight="Bold" 
-                       FontFamily="Verdana" 
-                       FontSize="9"/>
-            <TextBlock Text="{Binding SubtaskName, ElementName=root}" 
-                       TextWrapping="Wrap" 
-                       FontFamily="Verdana"/>
-            <TextBlock Text="{Binding Responsible, ElementName=root, StringFormat='Ответственные: {0}'}" 
-                       FontStyle="Italic" 
-                       FontFamily="Verdana" 
-                       FontSize="9"/>
-            <TextBlock Text="{Binding TaskCode, ElementName=root, StringFormat='Код задачи: {0}'}" 
-                       Foreground="Blue" 
-                       FontFamily="Verdana" 
-                       FontSize="9"/>
-            <TextBlock Text="{Binding TaskName, ElementName=root, StringFormat='Задача: {0}'}" 
-                       Foreground="Blue" 
-                       FontFamily="Verdana" 
-                       FontSize="9"/>
-            <Button Content="Подробнее" 
-                    Click="SubtaskButton_Click" 
-                    Margin="0,5,0,0" 
-                    Background="#FF000083" 
-                    BorderBrush="#FF000083" 
-                    Foreground="White" 
-                    FontFamily="Verdana"/>
-        </StackPanel>
+        <Grid>
+            <StackPanel>
+                <TextBlock Text="{Binding SubtaskNumber, ElementName=root, StringFormat='Подзадача #{0}'}"
+                           FontWeight="Bold"
+                           FontFamily="Verdana"
+                           FontSize="9"/>
+                <TextBlock Text="{Binding SubtaskName, ElementName=root}"
+                           TextWrapping="Wrap"
+                           FontFamily="Verdana"/>
+                <TextBlock Text="{Binding Responsible, ElementName=root, StringFormat='Ответственные: {0}'}"
+                           FontStyle="Italic"
+                           FontFamily="Verdana"
+                           FontSize="9"/>
+                <TextBlock Text="{Binding TaskCode, ElementName=root, StringFormat='Код задачи: {0}'}"
+                           Foreground="Blue"
+                           FontFamily="Verdana"
+                           FontSize="9"/>
+                <TextBlock Text="{Binding TaskName, ElementName=root, StringFormat='Задача: {0}'}"
+                           Foreground="Blue"
+                           FontFamily="Verdana"
+                           FontSize="9"/>
+                <TextBlock Text="Подробнее"
+                           MouseLeftButtonDown="DetailsTextBlock_MouseLeftButtonDown"
+                           Foreground="Blue"
+                           TextDecorations="Underline"
+                           Cursor="Hand"
+                           Margin="0,5,0,0" FontSize="10"/>
+            </StackPanel>
+            <StackPanel HorizontalAlignment="Right" Orientation="Horizontal">
+                <Button x:Name="EditButton" Width="17" Margin="0,0,5,72" Background="Transparent" BorderThickness="0" Padding="0" Click="EditButton_Click" ToolTip="Редактировать подзадачу">
+                    <Button.Content>
+                        <Path Data="M20.71,7.04C21.1,6.65 21.1,6 20.71,5.63L18.37,3.29C18,2.9 17.35,2.9 16.96,3.29L15.12,5.12L18.87,8.87M3,17.25V21H6.75L17.81,9.93L14.06,6.18L3,17.25Z" Fill="#FF898989" Stretch="Uniform" Height="8.328" Width="9.223"/>
+                    </Button.Content>
+                </Button>
+                <Button x:Name="DeleteButton" Width="11" Margin="0,0,0,69" Background="Transparent" BorderThickness="0" Padding="0" Click="DeleteButton_Click" ToolTip="Удалить подзадачу" RenderTransformOrigin="0.488,-1.243">
+                    <Path Data="M19,4H15.5L14.5,3H9.5L8.5,4H5V6H19M6,19A2,2 0 0,0 8,21H16A2,2 0 0,0 18,19V7H6V19Z" Fill="#FF898989" Stretch="Uniform" Height="8.626" Width="8.328"/>
+                </Button>
+            </StackPanel>
+        </Grid>
     </Border>
 </UserControl>
