--- a/Project/Pages/Kanban.xaml
+++ b/Project/Pages/Kanban.xaml
@@ -38,14 +38,15 @@
                     <ColumnDefinition Width="Auto"/>
                     <ColumnDefinition Width="*"/>
                 </Grid.ColumnDefinitions>
-                <Image Width="30" Height="30" Source="/Image/avata.jpg" />
+                <Image x:Name="leftProfileImage" Width="30" Height="30" Grid.Column="0"/>
+                <!-- Добавлен Image -->
                 <Label Content="{Binding FullName}" Grid.Column="1"
-                    Margin="0,0,-3,0" 
-                   VerticalAlignment="Center"
-                   Foreground="#FF000083" 
-                   FontWeight="Bold" 
-                   FontFamily="Verdana" FontSize="9"
-                   MouseDown="PAText_MouseDown"/>
+                       Margin="0,0,-3,0" 
+                       VerticalAlignment="Center"
+                       Foreground="#FF000083" 
+                       FontWeight="Bold" 
+                       FontFamily="Verdana" FontSize="9"
+                       MouseDown="PAText_MouseDown"/>
             </Grid>
             <Button Content="Проекты" Click="Bt7_Projects" 
                     Grid.Row="6" Height="30" Margin="10,0"/>
@@ -77,7 +78,6 @@
 
             <ScrollViewer Grid.Row="2" HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto">
                 <StackPanel x:Name="parent" Orientation="Horizontal">
-
                 </StackPanel>
             </ScrollViewer>
         </Grid>
