--- a/Project/Pages/PersonalAccount.xaml
+++ b/Project/Pages/PersonalAccount.xaml
@@ -40,8 +40,7 @@
                     <ColumnDefinition Width="Auto"/>
                     <ColumnDefinition Width="*"/>
                 </Grid.ColumnDefinitions>
-                <Image x:Name="leftProfileImage" Width="30" Height="30" Source="/Image/avata.jpg" Grid.Column="0"/>
-                <!-- Обновлен x:Name -->
+                <Image x:Name="leftProfileImage" Width="30" Height="30" Grid.Column="0"/>
                 <Label Content="{Binding FullName}" Grid.Column="1"
                        Margin="0,0,-4,0" 
                        VerticalAlignment="Center"
@@ -77,7 +76,7 @@
                 <ColumnDefinition Width="163*"/>
             </Grid.ColumnDefinitions>
 
-            <Image x:Name="profileImage" Width="100" Height="100" Source="/Image/avata.jpg" Grid.Row="0" Grid.Column="0"/>
+            <Image x:Name="profileImage" Width="100" Height="100" Grid.Row="0" Grid.Column="0"/>
 
             <StackPanel Grid.Row="0" Grid.Column="1" Margin="10,0,0,0" Grid.ColumnSpan="2">
                 <Label Content="{Binding FullName}"
