--- a/Project/Pages/Project1.xaml
+++ b/Project/Pages/Project1.xaml
@@ -39,7 +39,7 @@
                     <ColumnDefinition Width="Auto"/>
                     <ColumnDefinition Width="*"/>
                 </Grid.ColumnDefinitions>
-                <Image Width="30" Height="30" Source="/Image/avata.jpg"/>
+                <Image x:Name="leftProfileImage" Width="30" Height="30" Grid.Column="0"/>
                 <Label Content="{Binding FullName}" Grid.Column="1"
                        Margin="0,0,-3,0" 
                        VerticalAlignment="Center"
@@ -60,7 +60,6 @@
                 <RowDefinition Height="*"/>
             </Grid.RowDefinitions>
 
-
             <Grid Grid.Row="0">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*"/>
@@ -77,7 +76,6 @@
 
             <ScrollViewer Grid.Row="1">
                 <StackPanel x:Name="ProjectsPanel" Margin="0,10,0,0">
-
                 </StackPanel>
             </ScrollViewer>
         </Grid>
