--- a/Project/Main/TaskCard.xaml
+++ b/Project/Main/TaskCard.xaml
@@ -11,7 +11,7 @@
                 <TextBlock Text="{Binding Responsible, RelativeSource={RelativeSource AncestorType=UserControl}, StringFormat='Ответственные: {0}'}" FontStyle="Italic" FontFamily="Verdana" FontSize="9"/>
                 <TextBlock Text="{Binding ProjectCode, RelativeSource={RelativeSource AncestorType=UserControl}, StringFormat='Код проекта: {0}'}" Foreground="Blue" FontFamily="Verdana" FontSize="9"/>
                 <TextBlock Text="{Binding ProjectName, RelativeSource={RelativeSource AncestorType={x:Type UserControl}}, StringFormat=Проект: \{0\}}" Foreground="Blue" FontFamily="Verdana" FontSize="9"/>
-                <TextBlock Text="Подробнее" MouseLeftButtonDown="DetailsTextBlock_MouseLeftButtonDown" Foreground="Blue" TextDecorations="Underline" Cursor="Hand" Margin="0,5,0,0"/>
+                <TextBlock Text="Подробнее" MouseLeftButtonDown="DetailsTextBlock_MouseLeftButtonDown" Foreground="Blue" TextDecorations="Underline" Cursor="Hand" Margin="0,5,0,0" FontFamily="Verdana" FontSize="8"/>
                 <Button Content="Подзадачи" Click="TaskButton_Click" Margin="0,5,0,0" Background="#FF000083" BorderBrush="#FF000083" Foreground="White" FontFamily="Verdana"/>
             </StackPanel>
             <StackPanel HorizontalAlignment="Right" Orientation="Horizontal">
@@ -19,7 +19,7 @@
                     <Path Data="M20.71,7.04C21.1,6.65 21.1,6 20.71,5.63L18.37,3.29C18,2.9 17.35,2.9 16.96,3.29L15.12,5.12L18.87,8.87M3,17.25V21H6.75L17.81,9.93L14.06,6.18L3,17.25Z" Fill="#FF898989" Stretch="Uniform" Height="6.835" Width="9.223" RenderTransformOrigin="1.04,0.516"/>
                 </Button>
                 <Button x:Name="DeleteButton" Width="14" Margin="0,2,0,93" Background="Transparent" BorderThickness="0" Padding="0" Click="DeleteButton_Click" ToolTip="Удалить задачу">
-                    <Path Data="M19,4H15.5L14.5,3H9.5L8.5,4H5V6H19M6,19A2,2 0 0,0 8,21H16A2,2 0 0,0 18,19V7H6V19Z" Fill="#FF898989" Stretch="Uniform" Height="7.133" Width="6.536"/>
+                    <Path Data="M19,4H15.5L14.5,3H9.5L8.5,4H5V6H19M6,19A2,2 0 0,0 8,21H16A2,2 0 0,0 18,19V7H6V19Z" Fill="#FF9B0000" Stretch="Uniform" Height="7.133" Width="6.536"/>
                 </Button>
             </StackPanel>
         </Grid>
