--- a/Project/Main/TaskCard.xaml
+++ b/Project/Main/TaskCard.xaml
@@ -1,6 +1,8 @@
 ﻿<UserControl x:Class="Project.Main.TaskCard"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" Width="216">
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             Width="216"
+             x:Name="root">
     <Border Background="LightGray" CornerRadius="5" Padding="5" Margin="5" AllowDrop="True"
             PreviewMouseLeftButtonDown="Border_PreviewMouseLeftButtonDown"
             PreviewMouseMove="Border_PreviewMouseMove">
@@ -16,9 +18,32 @@
             </StackPanel>
             <StackPanel HorizontalAlignment="Right" Orientation="Horizontal">
                 <Button x:Name="EditButton" Width="11" Margin="0,0,5,93" Background="Transparent" BorderThickness="0" Padding="0" Click="EditButton_Click" ToolTip="Редактировать задачу" RenderTransformOrigin="1.072,0.394">
+                    <Button.Style>
+                        <Style TargetType="Button">
+                            <Setter Property="Visibility" Value="Collapsed"/>
+                            <Style.Triggers>
+                                <DataTrigger Binding="{Binding UserRole, ElementName=root}" Value="Создатель">
+                                    <Setter Property="Visibility" Value="Visible"/>
+                                </DataTrigger>
+                                <DataTrigger Binding="{Binding UserRole, ElementName=root}" Value="Администратор">
+                                    <Setter Property="Visibility" Value="Visible"/>
+                                </DataTrigger>
+                            </Style.Triggers>
+                        </Style>
+                    </Button.Style>
                     <Path Data="M20.71,7.04C21.1,6.65 21.1,6 20.71,5.63L18.37,3.29C18,2.9 17.35,2.9 16.96,3.29L15.12,5.12L18.87,8.87M3,17.25V21H6.75L17.81,9.93L14.06,6.18L3,17.25Z" Fill="#FF898989" Stretch="Uniform" Height="6.835" Width="9.223" RenderTransformOrigin="1.04,0.516"/>
                 </Button>
                 <Button x:Name="DeleteButton" Width="14" Margin="0,2,0,93" Background="Transparent" BorderThickness="0" Padding="0" Click="DeleteButton_Click" ToolTip="Удалить задачу">
+                    <Button.Style>
+                        <Style TargetType="Button">
+                            <Setter Property="Visibility" Value="Collapsed"/>
+                            <Style.Triggers>
+                                <DataTrigger Binding="{Binding UserRole, ElementName=root}" Value="Создатель">
+                                    <Setter Property="Visibility" Value="Visible"/>
+                                </DataTrigger>
+                            </Style.Triggers>
+                        </Style>
+                    </Button.Style>
                     <Path Data="M19,4H15.5L14.5,3H9.5L8.5,4H5V6H19M6,19A2,2 0 0,0 8,21H16A2,2 0 0,0 18,19V7H6V19Z" Fill="#FF9B0000" Stretch="Uniform" Height="7.133" Width="6.536"/>
                 </Button>
             </StackPanel>
